# backend/src/auth/dto/auth-response.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class AuthResponseDto {
+  @ApiProperty()
+  access_token: string;
+
+  @ApiProperty({ example: 86400 })
+  expires_in: number;
+}
